--- a/app/src/main/res/layout/activity_simplerating.xml
+++ b/app/src/main/res/layout/activity_simplerating.xml
@@ -27,4 +27,10 @@
         android:layout_height="wrap_content"
         android:text="计分" />
 
+    <Button
+        android:id="@+id/isIndicatorBtn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="是否指示器" />
+
 </LinearLayout>
